# module-magic

./: .gitlab-ci.yml  CMakeLists.txt  README  qore-magic-module.spec
cmake/: FindLibMagic.cmake  FindQore.cmake
docs/: Doxyfile.in
src/: magic-module.cpp  magic.qpp  main.cpp  qoremagic.cpp  qoremagic.h
test/: magic-test-threads.q  magic-test.q  magic.qtest  qore.txt
test/docker_test/: test-alpine.sh  test-ubuntu.sh  test.sh
